[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/game_set_results_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/fonts_tab.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/fonts_tab2.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 4 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 500.0

[node name="HboxGenerate" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="vbox_bt" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HboxGenerate"]
margin_bottom = 22.0

[node name="Container" type="Container" parent="MarginContainer/VBoxContainer/HboxGenerate"]
margin_left = 4.0
margin_right = 700.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="back_btn" type="Button" parent="MarginContainer/VBoxContainer/HboxGenerate"]
margin_left = 704.0
margin_right = 800.0
margin_bottom = 22.0
theme = SubResource( 2 )
text = "Retour Accueil"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 800.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vboxTours" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 800.0
margin_bottom = 474.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox_tour" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours"]
margin_right = 800.0
margin_bottom = 28.0

[node name="previous_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/hbox_tour"]
margin_right = 264.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
text = "Prec√©dent"

[node name="lab_tourIndex" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/hbox_tour"]
margin_left = 268.0
margin_top = 1.0
margin_right = 532.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="next_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/hbox_tour"]
margin_left = 536.0
margin_right = 800.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
text = "Suivant"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours"]
margin_top = 32.0
margin_right = 800.0
margin_bottom = 474.0
size_flags_vertical = 3

[node name="richlab_tour" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/HBoxContainer"]
margin_right = 496.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/table_vseparation = 3
custom_constants/table_hseparation = 10
bbcode_enabled = true

[node name="allTournoi" type="Container" parent="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/HBoxContainer"]
margin_left = 500.0
margin_right = 800.0
margin_bottom = 442.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3
[connection signal="pressed" from="MarginContainer/VBoxContainer/HboxGenerate/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/hbox_tour/previous_btn" to="." method="_on_previous_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/vboxTours/hbox_tour/next_btn" to="." method="_on_next_btn_pressed"]
